# paperless_bt

./: README.md  address_api.json  french_mnc.csv  pyproject.toml  tox.ini
src/paperless_bt/: address_api.py  application_router.py  coordinates.py  main.py  mobile_site.py
tests/: test_address_api.py  test_coordinates.py  test_mobile_site.py
