[project]
name = "paperless-bt"
version = "0.0.0"
description = "Parperless backend test"
authors = [
    {name = "Damien Bihel", email = "biheldamien@gmail.com"},
]
dependencies = [
    "fastapi>=0.105.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.7.1",
    "pytest>=7.4.3",
    "ruff>=0.1.7",
    "tox-pdm>=0.7.0",
]

[tool.ruff]
select = ["E", "F", "I001"]
