[project]
name = "paperless-bt"
version = "0.0.0"
description = "Parperless backend test"
authors = [
    {name = "Damien Bihel", email = "biheldamien@gmail.com"},
]
dependencies = [
    "fastapi>=0.105.0",
    "aiohttp>=3.9.1",
    "pytest-asyncio>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.7.1",
    "pytest>=7.4.3",
    "ruff>=0.1.7",
    "tox-pdm>=0.7.0",
]

[tool.ruff]
select = ["E", "F", "I001"]

[tool.pytest.ini_options]
markers = [
    "http_request: mark a test that do request to the outside world"
]
